<resources>
    <string name="app_name">Royal Finance Corporation</string>
    <string name="acc_type">Acc Type</string>
    <string name="name_or_acc_no">Name or Acc No</string>
    <string name="previous_amount">Previous Amount</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="submit">Submit</string>
    <string name="print">Print</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="clear">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_history_fragment_title">Transaction History</string>
    <string name="delete">delete</string>
    <string name="acc_no_type"><![CDATA[Acc No & Type]]></string>
    <string name="cancel_pf">Cancel</string>
    <string name="no_fingerprints_message_pf">No fingerprints found. Please add fingerprints in the settings if you want to use this authorization method."</string>
    <string name="no_fingerprints_title_pf">"No fingerprints found"</string>

    <string name="fingerprint_not_recognized_pf">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success_pf">Fingerprint recognized</string>
    <string name="fingerprint_description_pf">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint_pf">Touch sensor</string>
    <string name="description_fingerprint_icon_pf">Fingerprint icon</string>

    <string name="forgot_pf">Forgot?</string>
    <string name="lock_screen_title_pf">Input pin code or use fingerprint</string>
    <string name="todo">TODO</string>
    <string name="next_pf">Next</string>
    <string name="settings_pf">Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="sign_in_pf">Sign in</string>
</resources>