<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/avNameAccNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_or_acc_no"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlAccountType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tlPassword">

        <EditText
            android:id="@+id/tvAccountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ACC TYPE: "
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPrevAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tlAccountType">

        <EditText
            android:id="@+id/tvPrevAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PREV AMT:"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tlPrevAmount">

        <EditText
            android:id="@+id/tvAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number"
            android:paddingStart="5dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_amount"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tlAmount" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_semibold"
        android:onClick="onClick"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btnClear"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalAmount" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/btnSubmit"
        android:fontFamily="@font/open_sans_semibold"
        android:onClick="onClick"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@id/tvTotalAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>