<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_pf"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                style="?pf_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:text="Welcome" />

            <TextView
                android:id="@+id/user_text_view"
                style="?pf_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:text="user name" />
        </LinearLayout>

        <TextView
            style="?pf_title"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:text="Tap to Login with Fingerprint" />

        <ImageView
            android:id="@+id/button_finger_print"
            style="?pf_fingerprint_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/side_button_background_pf"
            android:gravity="center"
            android:src="@drawable/fingerprint_lockscreen_pf"
            android:padding="5dp"
            tools:ignore="HardcodedText"
            android:contentDescription="@string/todo"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title_text_view"
            style="?pf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="Or, Enter 4 Digit Login PIN" />

        <com.example.pigmy.pflockscreen.views.PFCodeView
            android:id="@+id/code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment,MissingPrefix">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_1"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="1"
                    android:background="@drawable/tv_item_back"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_2"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_3"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_4"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_5"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_6"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="6"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_7"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_8"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="8"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_9"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="9"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_left"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:clickable="true"
                    android:visibility="gone"
                    android:focusable="true"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/forgot_pf"
                    android:theme="@style/PFLockScreenHintTextStyle"
                    style="?pf_hint"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_0"
                    android:background="@drawable/tv_item_back"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/button_delete"
                    style="?pf_delete_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:text="fp"
                    android:theme="@style/PFLockScreenDeleteButtonStyle"
                    android:visibility="gone"
                    android:contentDescription="@string/todo"
                    tools:ignore="HardcodedText"
                    app:tint="@color/black" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:visibility="gone"
            tools:ignore="ObsoleteLayoutParam">

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_pf"
                android:visibility="visible"
                android:theme="@style/PFLockScreenNextTextStyle"
                style="?pf_next"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
